	    - Trollsbane prevents trolls from leaving corpses while wielded.
	  - Other:
	    - Luck Blade added, first sacrifice gift for Convicts
	    - Grimtooth is the first sacrifice gift for Rogues; it is now
	      permanently poisoned and grants poison resistance while wielded
	    - The Longbow of Diana gives +1 multishot and +1 damage bonus when
	      firing any type of arrow
	    - Excalibur can be cleanly untrapped when embedded in dungeon features;
	      it also tends to appear there when gifted or wished for

	* New config option for customizing monster letter in UTF8graphics:
	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke

	* removed monsters:
	  - anti-matter vortex

	* Livelog: report bag of holding explosions

	* New role: Convict class

	* new monsters:
	  - locusts (from SporkHack)
	  - weeping angels
	  - weeping archangels
	  - deep orcs

	* new levels:
	  - Black market version with One-eyed Sam promoted to management

	* dungeon layout:
	  - length of Town branch reduced and special filler level added
	  - new branch: The Ruins of Moria

	* Options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation:
	  - Tourists get automatic typ identification for shop items
	  - Healers can see how wounded monsters are (by L)
	  - Knights get a weight bonus for body armor heavier than
	      studded leather armor

	* user interface improvements:
	  - HP notify, showing HP changes in the message area (from NAO)
	  - Menus made aware of the maximum count of an item (by heinrich5991)
	  - Message for some monster cancellation events
	  - When standing on Elbereth, show it in status lines
	  - New paranoid options: paranoid_lava and paranoid_water, asks for